--- a/loser.css
+++ b/loser.css
@@ -18,7 +18,46 @@ html {
     
 }
 
+
 ytd-item-section-renderer:nth-of-type(1) {
+  border-bottom: 0px solid #e5e5e5 !important;
+}
+
+html:not([dark]) ytd-comments-header-renderer {
+  padding-bottom: 20px;
+  border-bottom: 0px solid #e2e2e2;
+}
+
+#meta .ytd-video-secondary-info-renderer tp-yt-paper-button.ytd-expander {
+  width: 100%;
+  border-top: 0px solid #e2e2e2;
+  padding-top: 0px;
+  margin-bottom: 0 !important;
+  border-radius: 0;
+  margin-top: 0px !important;
+  height: 0px;
+}
+
+ytd-compact-autoplay-renderer {
+  margin-bottom: 0 !important;
+  padding-bottom: 0px !important;
+  width: 310px;
+  display: block;
+  border-bottom: 0px;
+}
+
+ytd-compact-autoplay-renderer {
+  margin-bottom: 0 !important;
+  padding-bottom: 7px !important;
+  width: 310px;
+  display: block;
+  border-bottom: 0px;
+}
+
+#info ytd-video-owner-renderer {
+  top: -21px !important;
+  position: relative;
+  padding-bottom: 7px !important;
   border-bottom: 0px solid #e5e5e5 !important;
 }
 
@@ -283,13 +322,7 @@ element {
   max-width: 640px !important;
 }
 
-ytd-compact-autoplay-renderer {
-  margin-bottom: 0 !important;
-  padding-bottom: 7px !important;
-  width: 310px;
-  display: block;
-  border-bottom: 1px solid var(--yt-spec-10-percent-layer);
-}
+
 
 #secondary-inner.ytd-watch-flexy {
   width: 310px !important;
